istio/virtual-service-billing-service-info-50-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-service-info-virtual-service
spec:
  hosts:
    - billing-service-info-service
  http:
  - route:
    - destination:
        host: billing-service-info-service
        subset: v1
      weight: 50
    - destination:
        host: billing-service-info-service
        subset: v3
      weight: 50
