istio/virtual-service-billing-service-info-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-service-info-virtual-service
spec:
  hosts:
    - billing-service-info-service
  http:
  - match:
    - headers:
        x-api-key:
          exact: "123456"
    route:
    - destination:
        host: billing-service-info-service
        subset: v2
  - route:
    - destination:
        host: billing-service-info-service
        subset: v1
