istio/virtual-service-billing-service-info-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: billing-service-info-virtual-service
spec:
  hosts:
    - billing-service-info
  http:
  - route:
    - destination:
        host: billing-service-info
        subset: v3
