istio/virtual-service-customer-service-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - customer-service
  http:
  - fault:
      abort:
        percent: 80
        httpStatus: 400
    route:
    - destination:
        host: customer-service
        subset: v1
