istio/virtual-service-customer-service-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - customer
  http:
  - fault:
      delay:
        percent: 80
        fixedDelay: 7s
    route:
    - destination:
        host: customer
        subset: v1
