istio/virtual-service-customer-service-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - customer
  http:
  - route:
    - destination:
        host: customer
        subset: v1
    retries:
      attempts: 3
      perTryTimeout: 2s
