istio/virtual-service-customer-service-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - customer-service
  http:
  - route:
    - destination:
        host: customer-service
        subset: v1
    timeout: 10s
